{{$NEXT}}

0.084     2013-05-14 17:24:22 America/Los_Angeles

      ENHANCEMENTS:

      Revised documentation for pintod.

      BUG FIXES:

      Now requires verison 0.018 of Test::LWP::UserAgent or newer
      which resolves some test failures in Pinto seen by CPAN
      Testers using older versions of T::LWP::UA.

0.083     2013-05-13 14:36:21 America/Los_Angeles

      ENHANCEMENTS:

      * Improved password prompting, so it still works when STDIN
      and/or STDOUT are not connected to a terninal anymore.

      * Revised and corrected errors in documentation.

      * The etc/ directory has a sample init.d script (thanks @hesco).

0.082     2013-04-29 09:42:43 America/Los_Angeles

       Just minor changes so Pinto will run on perl 5.8.9

0.081     2013-04-26 13:51:32 America/Los_Angeles

       Just a minor change in test code to prevent failure occasionaly
       seen on Unix boxen.

0.080     2013-04-26 10:41:19 America/Los_Angeles

      HEADLINES:

      Pinto::Server and Pinto::Remote have been merged into this distribution,
      so everything ships together.  It also means both Pinto::Server and 
      Pinto::Remote are now working again.  Woot!!

      There is one caveat: when using a remote repository, pinto will not
      display the diff and prompt you to edit the commit message.  Instead,
      it will automatically use the default generated message or the message
      you specified at the command line.  I hope to fix this soon.

      BUG FIXES:

      * pinto(1) and pintod(1) will now be installed with a fixed shebang, 
      so that they will always run with the same version of perl, even if 
      you use perlbrew to switch to a differnt perl (thanks @punter)

      * pinto(1) will now show the progress meter when reading input from a
      file.  The progress meter will be hidden whenever STDERR is not
      connected to a tty.  Use the --verbose or --quiet option to forcibly
      hide the progress meter.
